--- a/connect-web/.babelrc
+++ b/connect-web/.babelrc
@@ -1,10 +1,11 @@
 {
   "presets": ["@babel/preset-env", "@babel/preset-react"],
   "plugins": [
-      ["@babel/plugin-transform-runtime",
-        {
-          "regenerator": true
-        }
-      ]
-    ],
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "regenerator": true
+      }
+    ]
+  ]
 }
