--- a/connect-server/src/main/resources/application.properties
+++ b/connect-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8000
-spring.http.multipart.enabled=true
+spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 jwt.signing.key.secret=mySecret
@@ -7,5 +7,5 @@ jwt.get.token.uri=/authenticate
 jwt.refresh.token.uri=/refresh
 jwt.http.request.header=Authorization
 jwt.token.expiration.in.seconds=604800
-spring.security.user.name=in28minutes
+spring.security.user.name=revber@ff.con
 spring.security.user.password=dummy
