--- a/connect-web/package.json
+++ b/connect-web/package.json
@@ -7,7 +7,10 @@
     "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/polyfill": "^7.8.7",
     "@babel/runtime": "^7.9.2",
+    "ag-grid-community": "^23.0.2",
+    "ag-grid-react": "^23.0.3",
     "axios": "^0.19.2",
+    "connected-react-router": "^6.0.0",
     "file-loader": "^6.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -27,16 +30,18 @@
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
-    "history": "^4.6.3",
+    "history": "^4.10.1",
+    "react-hot-loader": "^4.3.12",
     "marked": "^0.3.6",
     "prop-types": "^15.5.10",
-    "react": "^16.3.0",
+    "react": "^16.8.3",
     "react-dom": "^16.3.0",
-    "react-redux": "^5.0.7",
+    "connected-react-router": "^6.0.0",
+    "react-redux": "^7.2.0",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
-    "react-router-redux": "^5.0.0-alpha.6",
     "redux-logger": "^3.0.1",
+    "redux": "4.0.5",
     "superagent": "^3.8.2",
     "superagent-promise": "^1.1.0"
   },
