--- a/connect-web/package.json
+++ b/connect-web/package.json
@@ -24,33 +24,37 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "connected-react-router": "^6.0.0",
     "css-loader": "^3.5.2",
-    "html-loader": "^1.1.0",
-    "html-webpack-plugin": "^4.2.0",
-    "path": "^0.12.7",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
     "history": "^4.10.1",
-    "react-hot-loader": "^4.3.12",
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^4.3.0",
     "marked": "^0.3.6",
+    "mini-css-extract-plugin": "^0.9.0",
+    "path": "^0.12.7",
     "prop-types": "^15.5.10",
     "react": "^16.8.3",
     "react-dom": "^16.3.0",
-    "connected-react-router": "^6.0.0",
+    "react-hot-loader": "^4.3.12",
     "react-redux": "^7.2.0",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
-    "redux-logger": "^3.0.1",
     "redux": "4.0.5",
+    "redux-logger": "^3.0.1",
     "superagent": "^3.8.2",
-    "superagent-promise": "^1.1.0"
+    "superagent-promise": "^1.1.0",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
+    "webpack-merge": "^4.2.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack-dev-server": "webpack-dev-server",
     "dev": "webpack-dev-server --open --mode development",
-    "prod": "webpack --mode=production"
+    "prod": "webpack --mode=production",
+    "build": "webpack --config webpack.dev.js"
   },
   "keywords": [],
   "author": "",
