--- a/connect-web/package.json
+++ b/connect-web/package.json
@@ -52,11 +52,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack-dev-server": "webpack-dev-server",
-    "dev": "webpack-dev-server --open --mode development",
+    "dev": "webpack-dev-server --open --mode development --config webpack.dev.js",
     "prod": "webpack --mode=production",
     "build": "webpack --config webpack.dev.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "proxy": "http://localhost:8000"
 }
