--- a/connect-auth/pom.xml
+++ b/connect-auth/pom.xml
@@ -28,6 +28,11 @@
         <artifactId>jjwt-api</artifactId>
         <version>0.11.1</version>
     </dependency>
+       <dependency>
+           <groupId>io.projectreactor</groupId>
+           <artifactId>reactor-test</artifactId>
+           <scope>test</scope>
+       </dependency>
     <dependency>
         <groupId>io.jsonwebtoken</groupId>
         <artifactId>jjwt-impl</artifactId>
