--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,9 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>connect-server</module>
         <module>connect-web</module>
+        <module>connect-auth</module>
+        <module>connect-server</module>
 
     </modules>
 
