--- a/connect-server/pom.xml
+++ b/connect-server/pom.xml
@@ -20,7 +20,11 @@
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>3.8.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
