--- a/connect-web/package.json
+++ b/connect-web/package.json
@@ -7,14 +7,16 @@
     "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/polyfill": "^7.8.7",
     "@babel/runtime": "^7.9.2",
-    "ag-grid-community": "^23.0.2",
-    "ag-grid-react": "^23.0.3",
+    "@reduxjs/toolkit": "^1.4.0",
+    "ag-grid-community": "^23.2.1",
+    "ag-grid-react": "^23.2.1",
     "axios": "^0.19.2",
     "connected-react-router": "^6.0.0",
     "d3": "^5.16.0",
     "file-loader": "^6.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dom-factories": "^1.0.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "style-loader": "^1.1.3"
@@ -24,6 +26,7 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
+    "@reduxjs/toolkit": "^1.4.0",
     "clean-webpack-plugin": "^3.0.0",
     "connected-react-router": "^6.0.0",
     "css-loader": "^3.5.2",
