--- a/connect-auth/pom.xml
+++ b/connect-auth/pom.xml
@@ -12,7 +12,7 @@
     <groupId>connect</groupId>
     <artifactId>connect-auth</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>connect-authr</name>
+    <name>connect-auth</name>
     <description>Demo project for Spring JWt Auth</description>
 
     <modelVersion>4.0.0</modelVersion>
@@ -56,6 +56,11 @@
         <version>0.11.1</version>
         <scope>runtime</scope>
     </dependency>
+       <dependency>
+           <groupId>junit</groupId>
+           <artifactId>junit</artifactId>
+           <scope>test</scope>
+       </dependency>
 
    </dependencies>
 </project>
