--- a/connect-react/pom.xml
+++ b/connect-react/pom.xml
@@ -69,7 +69,7 @@
                                 <outputDirectory>../connect-server/target/classes/public</outputDirectory>
                                 <resources>
                                     <resource>
-                                        <directory>dist</directory>
+                                        <directory>build</directory>
                                         <filtering>true</filtering>
                                     </resource>
                                 </resources>
