--- a/connect-server/pom.xml
+++ b/connect-server/pom.xml
@@ -32,6 +32,11 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-ratelimiter</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
 
@@ -116,6 +121,13 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.projectreactor.kafka/reactor-kafka -->
+        <dependency>
+            <groupId>io.projectreactor.kafka</groupId>
+            <artifactId>reactor-kafka</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
@@ -124,6 +136,9 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+
+
 
     </dependencies>
 
@@ -165,38 +180,57 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.6</version>
-              <!--  <executions>
+                <executions>
                     <execution>
-                        <id>coverage-initialize</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
-
-
                     <execution>
-                        <id>coverage-check</id>
+                        <id>report</id>
+                        <phase>prepare-package</phase>
                         <goals>
-                            <goal>check</goal>
+                            <goal>report</goal>
                         </goals>
-                        <configuration>
-                            <rules>
-                                <rule>
-                                    <element>CLASS</element>
-                                    <limits>
-                                        <limit>
-                                            <counter>LINE</counter>
-                                            <value>COVEREDRATIO</value>
-                                            <minimum>80%</minimum>
-                                        </limit>
-                                    </limits>
-                                </rule>
-
-                            </rules>
-                        </configuration>
                     </execution>
-                </executions>-->
+                </executions>
             </plugin>
+            <!--  <plugin>
+                 <groupId>org.jacoco</groupId>
+                 <artifactId>jacoco-maven-plugin</artifactId>
+                 <version>0.8.6</version>
+                <executions>
+                     <execution>
+                         <id>coverage-initialize</id>
+                         <goals>
+                             <goal>prepare-agent</goal>
+                         </goals>
+                     </execution>
+
+
+                     <execution>
+                         <id>coverage-check</id>
+                         <goals>
+                             <goal>check</goal>
+                         </goals>
+                         <configuration>
+                             <rules>
+                                 <rule>
+                                     <element>CLASS</element>
+                                     <limits>
+                                         <limit>
+                                             <counter>LINE</counter>
+                                             <value>COVEREDRATIO</value>
+                                             <minimum>80%</minimum>
+                                         </limit>
+                                     </limits>
+                                 </rule>
+
+                             </rules>
+                         </configuration>
+                     </execution>
+                 </executions>
+            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -205,6 +239,7 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>3.1.0</version>
@@ -236,13 +271,15 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.2.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <descriptors>
+                        <descriptor>src/main/resources/example.xml</descriptor>
+                    </descriptors>
                 </configuration>
             </plugin>
+
 
         </plugins>
     </build>
