add self signed certificate

--- a/connect-auth/src/main/resources/application.properties
+++ b/connect-auth/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-server.port=8001
 springbootwebfluxjjwt.password.encoder.secret=mysecret
 springbootwebfluxjjwt.password.encoder.iteration=33
 springbootwebfluxjjwt.password.encoder.keylength=256
@@ -7,3 +6,10 @@ springbootwebfluxjjwt.jjwt.expiration=28800
 spring.r2dbc.url=r2dbc:postgresql://127.0.0.1:5432/identity?schema=user
 spring.r2dbc.username=postgres
 spring.r2dbc.password=@Water321
+server.port=8444
+server.ssl.enabled=true
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=connect-server/src/main/resources/siddy.p12
+server.ssl.key-store-password=@Water321
+server.ssl.key-alias=baeldung
+security.require-ssl=true
