--- a/connect-server/pom.xml
+++ b/connect-server/pom.xml
@@ -53,6 +53,11 @@
             <artifactId>spring-boot-starter-cache</artifactId>
 
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+
+        </dependency>
 
 
 
