--- a/connect-react/package.json
+++ b/connect-react/package.json
@@ -11,6 +11,7 @@
     "ag-grid-react": "^24.1.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.3",
+    "d3": "^5.16.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-dropdown": "^1.9.0",
@@ -20,8 +21,8 @@
     "react-scripts": "3.4.3",
     "react-validation": "^3.0.7",
     "redux": "^4.0.5",
-    "d3": "^5.16.0",
     "redux-thunk": "^2.3.0",
+    "typescript": "^4.1.3",
     "validator": "^13.1.17"
   },
   "scripts": {
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@google-pay/button-react": "^2.1.5",
     "redux-devtools-extension": "^2.13.8"
   },
   "proxy": "http://localhost:8080"
