--- a/connect-server/src/main/resources/application.properties
+++ b/connect-server/src/main/resources/application.properties
@@ -8,7 +8,7 @@ management.endpoints.web.exposure.include=*
 server.port=8443
 server.ssl.enabled=true
 server.ssl.key-store-type=PKCS12
-server.ssl.key-store=connect-server/src/main/resources/siddy.p12
+server.ssl.key-store=classpath:siddy.p12
 server.ssl.key-store-password=@Water321
 server.ssl.key-alias=baeldung
 security.require-ssl=true
