--- a/connect-auth/src/main/resources/application.properties
+++ b/connect-auth/src/main/resources/application.properties
@@ -9,7 +9,9 @@ spring.r2dbc.password=@Water321
 server.port=8444
 server.ssl.enabled=true
 server.ssl.key-store-type=PKCS12
-server.ssl.key-store=connect-server/src/main/resources/siddy.p12
+server.ssl.key-store=classpath:siddy.p12
 server.ssl.key-store-password=@Water321
 server.ssl.key-alias=baeldung
 security.require-ssl=true
+
+logging.level.org=OFF
