--- a/connect-auth/src/main/resources/application.properties
+++ b/connect-auth/src/main/resources/application.properties
@@ -9,7 +9,15 @@ spring.r2dbc.password=@Water321
 server.port=8444
 server.ssl.enabled=true
 server.ssl.key-store-type=PKCS12
-server.ssl.key-store=connect-server/src/main/resources/siddy.p12
+server.ssl.key-store=classpath:siddy.p12
 server.ssl.key-store-password=@Water321
 server.ssl.key-alias=baeldung
 security.require-ssl=true
+spring.mail.host=email-smtp.ap-south-1.amazonaws.com
+spring.mail.username=AKIAYYSBKJGBSNLGDRBU
+spring.mail.password=BF/noaGSa0Yjaqfx0GwirhXo1Zl+Ubcznf4lfly7McL9
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
