--- a/connect-react/package.json
+++ b/connect-react/package.json
@@ -24,6 +24,8 @@
     "react-scripts": "3.4.3",
     "react-validation": "^3.0.7",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.1.3",
     "validator": "^13.1.17"
