--- a/connect-react/package.json
+++ b/connect-react/package.json
@@ -64,5 +64,5 @@
     "@google-pay/button-react": "^2.1.5",
     "redux-devtools-extension": "^2.13.8"
   },
-  "proxy": "http://localhost:8443"
+  "proxy": "https://localhost:8443"
 }
